# etl-ir-core

./: README.md  etl-ir-core.code-workspace  pyproject.toml
src/etl_ir/: model.py  types.py
src/ir/: types.py
tests/: test_model.py  test_types.py
