[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "etl-ir-core"
version = "1.0.0"
dependencies = [
  "pydantic>=2.0"
]

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/etl_ir"]  # Matches the folder we just renamed

[tool.hatch.build.targets.editable]
packages = ["src/etl_ir"]  # Matches the folder we just renamed